--- a/index.htm
+++ b/index.htm
@@ -104,17 +104,17 @@
             <div style="">
               <h3 id="professionalexperience">Professional Experience</h3>
               <h4 id="oraclesanfranciscoca2013—2018">
-                <a href="https://www.oracle.com">ORACLE</a>, San Francisco, CA (2013 — 2018)
+               <a href="https://www.oracle.com" id="oracle-link" onclick="sendCustomTagToClarity('Link Click', 'Oracle Link')">ORACLE</a>, San Francisco, CA (2013 — 2018)
               </h4>
               <p>
                 <strong>Senior Product Manager, Engage &amp; Social Network Expansion</strong>
               </p>
               <ul>
                 <li>
-                  <strong>Doubled network coverage</strong> for Oracle Social Cloud by integrating key social platforms like <a href="https://finance.yahoo.com/news/oracle-social-cloud-launches-linkedin-120000379.html">LinkedIn</a>, <a href="https://www.yahoo.com/news/finance/news/oracle-social-cloud-adds-support-120000916.html">Sina Weibo</a>, <a href="https://www.yahoo.com/news/finance/news/oracle-social-cloud-adds-support-120000916.html">Instagram</a>, and <a href="https://docs.oracle.com/cloud/social/doc.1/srm/vitrue-srm-settings/the-resources-tab-social-properties.html?cmdf=tumblr">Tumblr</a>.
+                  <strong>Doubled network coverage</strong> for Oracle Social Cloud by integrating key social platforms like <a href="https://finance.yahoo.com/news/oracle-social-cloud-launches-linkedin-120000379.html" id="linkedin-integration-link" onclick="sendCustomTagToClarity('Link Click', 'LinkedIn Integration')">LinkedIn</a>, <a href="https://www.yahoo.com/news/finance/news/oracle-social-cloud-adds-support-120000916.html" id="sina-weibo-integration-link" onclick="sendCustomTagToClarity('Link Click', 'Sina Weibo Integration')">Sina Weibo</a>, <a href="https://www.yahoo.com/news/finance/news/oracle-social-cloud-adds-support-120000916.html" id="instagram-integration-link" onclick="sendCustomTagToClarity('Link Click', 'Instagram Integration')">Instagram</a>, and <a href="https://docs.oracle.com/cloud/social/doc.1/srm/vitrue-srm-settings/the-resources-tab-social-properties.html?cmdf=tumblr" id="tumblr-integration-link" onclick="sendCustomTagToClarity('Link Click', 'Tumblr Integration')">Tumblr</a>.
                 </li>
                 <li>
-                  <strong>Launching 32 features in 12 months</strong>, overhauling <a href="https://raw.githubusercontent.com/kevinmmiddleton/about/main/New%20Engage%20Datasheet.pdf">Oracle Social Cloud's Engage product</a>, driven by customer feedback and beta testing.
+                  <strong>Launched 32 features in 12 months</strong>, overhauling <a href="https://raw.githubusercontent.com/kevinmmiddleton/about/main/New%20Engage%20Datasheet.pdf" id="oracle-engage-link">Oracle Social Cloud's Engage product</a>, driven by customer feedback and beta testing.
                 </li>
                 <li>Managed cross-cloud integration of Engage with <strong>Oracle's Marketing, Sales, and Service clouds</strong>, and drove <strong>internationalization across 30 languages</strong>. </li>
               </ul>
@@ -144,9 +144,8 @@
                 <strong>Senior Product Manager, Core Product &amp; Platform</strong>
               </p>
               <ul>
-                <li>Launched <a href="https://www.rocketlawyer.com/newsroom/rocket-lawyer-covea-deliver-legal-benefits-to-insurance-customers">
-                    <strong>co-branded partner sites</strong>
-                  </a>, accounting for <strong>16% of European traffic</strong>, establishing a new revenue stream. <ul>
+                <li>Launched <a href="https://www.rocketlawyer.com/newsroom/rocket-lawyer-covea-deliver-legal-benefits-to-insurance-customers" id="co-branded-partner-sites-link" onclick="sendCustomTagToClarity('Link Click', 'Co-branded Partner Sites')">
+                    <strong>co-branded partner sites</strong></a>, accounting for <strong>16% of European traffic</strong>, establishing a new revenue stream. <ul>
                     <li>OpenID Connect authentication and customizable pricing, content, and access to features.</li>
                   </ul>
                 </li>
@@ -160,7 +159,7 @@
                 <img src="images/covea-document-creation.png" alt="Covea Document Creation" class="lightbox-enabled size-contain position-center-center">
               </div>
             </div>
-            <img src="images/legal-document-interview.png" class=" size-contain position-center-center" style="">
+            <img src="images/legal-document-interview.png" alt="Frictionless Mbile Legal Document Interview" class="lightbox-enabled size-contain position-center-center" style="">
           </div>
           <div class="footnotes"></div>
           <div class="footer">
@@ -188,9 +187,7 @@
                   <a href="https://core.sendoso.com/blog/scale-globally-with-sendoso/?cmdf=Expanded%20Gift%20Selections">Expanded</a>
                   <strong>US eGift catalog by 23%</strong> and <strong>international catalog by 67%</strong>.
                 </li>
-                <li>Formed <strong>strategic partnerships</strong>, including <a href="https://core.sendoso.com/blog/square-integration/?cmdf=square">
-                    <strong>Square</strong>
-                  </a>, for global market growth. </li>
+                <li>Formed <strong>strategic partnerships</strong>, including <a href="https://core.sendoso.com/blog/square-integration/?cmdf=square" id="square-integration-link" onclick="sendCustomTagToClarity('Link Click', 'Square Integration')"><strong>Square</strong></a>, for global market growth. </li>
                 <li>Enhanced eGift internal tooling to <strong>improve operational efficiency</strong> and launched a feature-tiering platform component, <strong>encouraging customer upgrades</strong>. </li>
               </ul>
             </div>
@@ -219,22 +216,22 @@
                 <strong>Senior Product Manager, HRIS Sync Lead</strong>
               </p>
               <ul>
-                <li>Created and launched <a href="https://www.lever.co/blog/lever-winter-release-2023?cmdf=HRIS%20Organization%20Configuration%20approval">
+                <li>Created and launched <a href="https://www.lever.co/blog/lever-winter-release-2023?cmdf=HRIS%20Organization%20Configuration%20approval" id="lever-winter-2023-release-link onclick="sendCustomTagToClarity('Link Click', 'HRIS Sync Release')">
                     <strong>HRIS</strong>
                   </a>
-                  <a href="https://help.lever.co/hc/en-us/articles/205697679-Adding-and-managing-users?cmdf=HRIS%20Organization%20Configuration%20proxy%20approval">
+                  <a href="https://help.lever.co/hc/en-us/articles/205697679-Adding-and-managing-users?cmdf=HRIS%20Organization%20Configuration%20proxy%20approval" id="hris-sync-at-lever-link" onclick="sendCustomTagToClarity('Link Click', 'HRIS Sync at Lever')">
                     <strong>Sync</strong>
-                  </a> to bring <strong>intelligent automations</strong> to Lever, including <a href="https://www.lever.co/blog/lever-spring-release-2023?cmdf=proxy%20approval">
+                  </a> to bring <strong>intelligent automations</strong> to Lever, including <a href="https://www.lever.co/blog/lever-spring-release-2023?cmdf=proxy%20approval id="proxy-approval-link" onclick="sendCustomTagToClarity('Link Click', 'Lever Proxy Approval')">
                     <strong>Proxy Approval</strong>
                   </a>
-                  <a href="https://help.lever.co/hc/en-us/articles/13832873976205-Approving-job-postings-requisitions-and-offers-by-proxy?cmdf=proxy%20approval">
+                  <a href="https://help.lever.co/hc/en-us/articles/13832873976205-Approving-job-postings-requisitions-and-offers-by-proxy?cmdf=proxy%20approval id="proxy-approval-link-2" onclick="sendCustomTagToClarity('Link Click', 'Lever Proxy Approval Details')">
                     <strong>driven by org chart</strong>
                   </a>.
                 </li>
                 <li>Achieved <strong>37% engagement rate</strong> with HRIS features in the first quarter after launch. </li>
-                <li>Launched <a href="https://www.lever.co/blog/lever-summer-release-2022?cmdf=self%20serve%20bulk%20candidate%20importer">
+                <li>Launched <a href="https://www.lever.co/blog/lever-summer-release-2022?cmdf=self%20serve%20bulk%20candidate%20importer" id="bulk-candidate-importer-link" onclick="sendCustomTagToClarity('Link Click', 'Bulk Candidate Importer Details')">
                     <strong>Self-Serve Bulk Candidate Importer</strong>
-                  </a>, significantly reducing bulk candidate upload times from <a href="https://help.lever.co/hc/en-us/articles/6608500020749?cmdf=Bulk%20importing%20import">
+                  </a>, significantly reducing bulk candidate upload times from <a href="https://help.lever.co/hc/en-us/articles/6608500020749?cmdf=Bulk%20importing%20import" id="bulk-candidate-importer-link-2" onclick="sendCustomTagToClarity('Link Click', 'Bulk Candidate Importer Details')">
                     <strong>days to minutes</strong>
                   </a>. </li>
               </ul>
