--- a/index.htm
+++ b/index.htm
@@ -114,7 +114,7 @@
                   <strong>Doubled network coverage</strong> for Oracle Social Cloud by integrating key social platforms like <a href="https://finance.yahoo.com/news/oracle-social-cloud-launches-linkedin-120000379.html" id="linkedin-integration-link" onclick="sendCustomTagToClarity('Link Click', 'LinkedIn Integration')">LinkedIn</a>, <a href="https://www.yahoo.com/news/finance/news/oracle-social-cloud-adds-support-120000916.html" id="sina-weibo-integration-link" onclick="sendCustomTagToClarity('Link Click', 'Sina Weibo Integration')">Sina Weibo</a>, <a href="https://www.yahoo.com/news/finance/news/oracle-social-cloud-adds-support-120000916.html" id="instagram-integration-link" onclick="sendCustomTagToClarity('Link Click', 'Instagram Integration')">Instagram</a>, and <a href="https://docs.oracle.com/cloud/social/doc.1/srm/vitrue-srm-settings/the-resources-tab-social-properties.html?cmdf=tumblr" id="tumblr-integration-link" onclick="sendCustomTagToClarity('Link Click', 'Tumblr Integration')">Tumblr</a>.
                 </li>
                 <li>
-                  <strong>Launched 32 features in 12 months</strong>, overhauling <a href="https://raw.githubusercontent.com/kevinmmiddleton/about/main/New%20Engage%20Datasheet.pdf" id="oracle-engage-link">Oracle Social Cloud's Engage product</a>, driven by customer feedback and beta testing.
+                  <strong>Launched 32 features in 12 months</strong>, overhauling <a href="https://raw.githubusercontent.com/kevinmmiddleton/about/main/New%20Engage%20Datasheet.pdf" id="oracle-engage-link" onclick="sendCustomTagToClarity('Link Click', ‘Oracle Engage Datasheet)”>Oracle Social Cloud's Engage product</a>, driven by customer feedback and beta testing.
                 </li>
                 <li>Managed cross-cloud integration of Engage with <strong>Oracle's Marketing, Sales, and Service clouds</strong>, and drove <strong>internationalization across 30 languages</strong>. </li>
               </ul>
@@ -138,7 +138,7 @@
           <div class="layout-grid grid-items-3 media-grid" style="width: 100%; font-size: 0.719rem;">
             <div style="">
               <h4 id="rocketlawyersanfranciscoca2018—2021">
-                <a href="https://www.rocketlawyer.com">ROCKET LAWYER</a>, San Francisco, CA (2018 — 2021)
+                <a href="https://www.rocketlawyer.com" id=“rocket-lawyer-link" onclick="sendCustomTagToClarity('Link Click', ‘Rocket Lawyer Link)”>ROCKET LAWYER</a>, San Francisco, CA (2018 — 2021)
               </h4>
               <p>
                 <strong>Senior Product Manager, Core Product &amp; Platform</strong>
