--- a/index.htm
+++ b/index.htm
@@ -114,7 +114,7 @@
                   <strong>Doubled network coverage</strong> for Oracle Social Cloud by integrating key social platforms like <a href="https://finance.yahoo.com/news/oracle-social-cloud-launches-linkedin-120000379.html" id="linkedin-integration-link" onclick="sendCustomTagToClarity('Link Click', 'LinkedIn Integration')">LinkedIn</a>, <a href="https://www.yahoo.com/news/finance/news/oracle-social-cloud-adds-support-120000916.html" id="sina-weibo-integration-link" onclick="sendCustomTagToClarity('Link Click', 'Sina Weibo Integration')">Sina Weibo</a>, <a href="https://www.yahoo.com/news/finance/news/oracle-social-cloud-adds-support-120000916.html" id="instagram-integration-link" onclick="sendCustomTagToClarity('Link Click', 'Instagram Integration')">Instagram</a>, and <a href="https://docs.oracle.com/cloud/social/doc.1/srm/vitrue-srm-settings/the-resources-tab-social-properties.html?cmdf=tumblr" id="tumblr-integration-link" onclick="sendCustomTagToClarity('Link Click', 'Tumblr Integration')">Tumblr</a>.
                 </li>
                 <li>
-                  <strong>Launched 32 features in 12 months</strong>, overhauling <a href="https://raw.githubusercontent.com/kevinmmiddleton/about/main/New%20Engage%20Datasheet.pdf" id="oracle-engage-link">Oracle Social Cloud's Engage product</a>, driven by customer feedback and beta testing.
+                  <strong>Launched 32 features in 12 months</strong>, overhauling <a href="https://raw.githubusercontent.com/kevinmmiddleton/about/main/New%20Engage%20Datasheet.pdf" id="oracle-engage-link" onclick="sendCustomTagToClarity('Link Click', 'Engage Datasheet')">Oracle Social Cloud's Engage product</a>, driven by customer feedback and beta testing.
                 </li>
                 <li>Managed cross-cloud integration of Engage with <strong>Oracle's Marketing, Sales, and Service clouds</strong>, and drove <strong>internationalization across 30 languages</strong>. </li>
               </ul>
@@ -138,7 +138,7 @@
           <div class="layout-grid grid-items-3 media-grid" style="width: 100%; font-size: 0.719rem;">
             <div style="">
               <h4 id="rocketlawyersanfranciscoca2018—2021">
-                <a href="https://www.rocketlawyer.com">ROCKET LAWYER</a>, San Francisco, CA (2018 — 2021)
+                <a href="https://www.rocketlawyer.com" id="rocket-lawyer-link" onclick="sendCustomTagToClarity('Link Click', 'Rocket Lawyer Link')">ROCKET LAWYER</a>, San Francisco, CA (2018 — 2021)
               </h4>
               <p>
                 <strong>Senior Product Manager, Core Product &amp; Platform</strong>
@@ -177,14 +177,14 @@
           <div class="layout-grid grid-items-3 media-grid" style="width: 100%; font-size: 0.719rem;">
             <div style="">
               <h4 id="sendososanfranciscoca2021">
-                <a href="https://www.sendoso.com">SENDOSO</a>, San Francisco, CA (2021)
+                <a href="https://www.sendoso.com" id="sendoso-link" onclick="sendCustomTagToClarity('Link Click', 'Sendoso Link')">SENDOSO</a>, San Francisco, CA (2021)
               </h4>
               <p>
                 <strong>Senior Product Manager, Core Platform &amp; eGift Expansion</strong>
               </p>
               <ul>
                 <li>
-                  <a href="https://core.sendoso.com/blog/scale-globally-with-sendoso/?cmdf=Expanded%20Gift%20Selections">Expanded</a>
+                  <a href="https://core.sendoso.com/blog/scale-globally-with-sendoso/?cmdf=Expanded%20Gift%20Selections" id="sendoso-egift-expansion" onclick="sendCustomTagToClarity('Link Click', 'Sendoso eGift Expansion')">Expanded</a>
                   <strong>US eGift catalog by 23%</strong> and <strong>international catalog by 67%</strong>.
                 </li>
                 <li>Formed <strong>strategic partnerships</strong>, including <a href="https://core.sendoso.com/blog/square-integration/?cmdf=square" id="square-integration-link" onclick="sendCustomTagToClarity('Link Click', 'Square Integration')"><strong>Square</strong></a>, for global market growth. </li>
@@ -210,13 +210,13 @@
           <div class="layout-grid grid-items-3 media-grid" style="width: 100%; font-size: 0.719rem;">
             <div style="">
               <h4 id="leversanfranciscoca2021—2023">
-                <a href="https://www.lever.co">LEVER</a>, San Francisco, CA (2021 — 2023)
+                <a href="https://www.lever.co" id="lever-link" onclick="sendCustomTagToClarity('Link Click', 'Lever Link')">LEVER</a>, San Francisco, CA (2021 — 2023)
               </h4>
               <p>
                 <strong>Senior Product Manager, HRIS Sync Lead</strong>
               </p>
               <ul>
-                <li>Created and launched <a href="https://www.lever.co/blog/lever-winter-release-2023?cmdf=HRIS%20Organization%20Configuration%20approval" id="lever-winter-2023-release-link onclick="sendCustomTagToClarity('Link Click', 'HRIS Sync Release')">
+                <li>Created and launched <a href="https://www.lever.co/blog/lever-winter-release-2023?cmdf=HRIS%20Organization%20Configuration%20approval" id="lever-winter-2023-release-link" onclick="sendCustomTagToClarity('Link Click', 'HRIS Sync Release')">
                     <strong>HRIS</strong>
                   </a>
                   <a href="https://help.lever.co/hc/en-us/articles/205697679-Adding-and-managing-users?cmdf=HRIS%20Organization%20Configuration%20proxy%20approval" id="hris-sync-at-lever-link" onclick="sendCustomTagToClarity('Link Click', 'HRIS Sync at Lever')">
@@ -260,14 +260,14 @@
           <div class="layout-grid grid-items-3 media-grid" style="width: 100%; font-size: 0.766rem;">
             <div style="">
               <h4 id="hurdaiberkeleyca2023—present">
-                <a href="https://hurd.ai">HURD AI</a>, Berkeley, CA (2023 — Present)
+                <a href="https://hurd.ai" id="hurd-ai-link" onclick="sendCustomTagToClarity('Link Click', 'Hurd AI Link')">HURD AI</a>, Berkeley, CA (2023 — Present)
               </h4>
               <p>
                 <strong>Co-founder &amp; Product Advisor</strong>
               </p>
               <ul>
                 <li>Led the development of AI-powered educational tools: a <strong>Mac app</strong> and a <strong>web-based chatbot</strong>. </li>
-                <li>Drove <a href="https://www.producthunt.com/products/hurd-ai-beta#hurd-ai-beta">
+                <li>Drove <a href="https://www.producthunt.com/products/hurd-ai-beta#hurd-ai-beta" id="hurd-ai-launch" onclick="sendCustomTagToClarity('Link Click', 'Hurd AI Launch')">
                     <strong>700% user growth</strong>
                   </a> post launch. </li>
                 <li>Versatility in roles, including Strategy, Marketing, Support, User Research, and Quality Assurance, crucial in the successful launch and growth of Hurd AI.</li>
@@ -511,7 +511,7 @@
               <p>- <strong>Bill Kirst, Leading Change in the Era of AI</strong>
               </p>
               <p>&nbsp;</p>
-              <p>Additional Recommendations from Colleagues on <a href="https://www.linkedin.com/in/kevinmiddleton/details/recommendations/">
+              <p>Additional Recommendations from Colleagues on <a href="https://www.linkedin.com/in/kevinmiddleton/details/recommendations/" id="linkedin-recommendations" onclick="sendCustomTagToClarity('Link Click', 'LinkedIn Recommendations')">
                   <strong>LinkedIn</strong>
                 </a>
               </p>
@@ -535,12 +535,12 @@
               <h2 id="letsconnect">Let's Connect!</h2>
               <p>Whether it's about product management, the latest in SaaS, or just a friendly chat, I'm always open to connecting and exchanging ideas.</p>
               <p>&nbsp;</p>
-              <p>Add me on <a href="https://www.linkedin.com/in/kevinmiddleton">
+              <p>Add me on <a href="https://www.linkedin.com/in/kevinmiddleton" id="linkedin-profile" onclick="sendCustomTagToClarity('Link Click', 'LinkedIn Profile')">
                   <strong>LinkedIn</strong>
                 </a>
               </p>
               <p>&nbsp;</p>
-              <p>Download my <a href="https://raw.githubusercontent.com/kevinmmiddleton/about/main/Kevin%20Middleton%20-%20Senior%20Product%20Manager%2012-01-2023.pdf">
+              <p>Download my <a href="https://raw.githubusercontent.com/kevinmmiddleton/about/main/Kevin%20Middleton%20-%20Senior%20Product%20Manager%2012-01-2023.pdf" id="resume-download" onclick="sendCustomTagToClarity('Link Click', 'Resume Download')">
                   <strong>Resume</strong>
                 </a>
               </p>
