--- a/index.htm
+++ b/index.htm
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <title>Kevin Middleton - Product Manager</title>
-    <base href="@@base@@" />
-    <meta charset="utf-8" />
-    <meta name="viewport" content="viewport-fit=cover, width=device-width, height=device-height, initial-scale=1" />
+    <base href="@@base@@">
+    <meta charset="utf-8">
+    <meta name="viewport" content="viewport-fit=cover, width=device-width, height=device-height, initial-scale=1">
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <!-- Open Graph Meta Tags -->
@@ -41,7 +41,7 @@
         --titlefont: system-ui;
       }
     </style>
-    <link rel="stylesheet" type="text/css" href="engine/print.css" media="print" />
+    <link rel="stylesheet" type="text/css" href="engine/print.css" media="print">
   </head>
   <body class="responsive">
     <div class="reveal">
@@ -221,7 +221,7 @@
                   </a>
                   <a href="https://help.lever.co/hc/en-us/articles/205697679-Adding-and-managing-users?cmdf=HRIS%20Organization%20Configuration%20proxy%20approval" id="hris-sync-at-lever-link" onclick="sendCustomTagToClarity('Link Click', 'HRIS Sync at Lever')">
                     <strong>Sync</strong>
-                  </a> to bring <strong>intelligent automations</strong> to Lever, including <a href="https://www.lever.co/blog/lever-spring-release-2023?cmdf=proxy%20approval id="proxy-approval-link" onclick="sendCustomTagToClarity('Link Click', 'Lever Proxy Approval')">
+                  </a> to bring <strong>intelligent automations</strong> to Lever, including <a href="https://www.lever.co/blog/lever-spring-release-2023?cmdf=proxy%20approval" id="proxy-approval-link" onclick="sendCustomTagToClarity('Link Click', 'Lever Proxy Approval')">
                     <strong>Proxy Approval</strong>
                   </a>
                   <a href="https://help.lever.co/hc/en-us/articles/13832873976205-Approving-job-postings-requisitions-and-offers-by-proxy?cmdf=proxy%20approval id="proxy-approval-link-2" onclick="sendCustomTagToClarity('Link Click', 'Lever Proxy Approval Details')">
