--- a/index.htm
+++ b/index.htm
@@ -224,7 +224,7 @@
                   </a> to bring <strong>intelligent automations</strong> to Lever, including <a href="https://www.lever.co/blog/lever-spring-release-2023?cmdf=proxy%20approval" id="proxy-approval-link" onclick="sendCustomTagToClarity('Link Click', 'Lever Proxy Approval')">
                     <strong>Proxy Approval</strong>
                   </a>
-                  <a href="https://help.lever.co/hc/en-us/articles/13832873976205-Approving-job-postings-requisitions-and-offers-by-proxy?cmdf=proxy%20approval id="proxy-approval-link-2" onclick="sendCustomTagToClarity('Link Click', 'Lever Proxy Approval Details')">
+                  <a href="https://help.lever.co/hc/en-us/articles/13832873976205-Approving-job-postings-requisitions-and-offers-by-proxy?cmdf=proxy%20approval" id="proxy-approval-link-2" onclick="sendCustomTagToClarity('Link Click', 'Lever Proxy Approval Details')">
                     <strong>driven by org chart</strong>
                   </a>.
                 </li>
