--- a/index.htm
+++ b/index.htm
@@ -573,6 +573,8 @@
         }, ],
       });
     </script>
+    <!-- JSzip -->
+    <script src="PptxGenJS/libs/jszip.min.js"></script> 
     <!-- Hammer JS -->
     <script src="hammer/hammer.js"></script>
     <script>
