--- a/index.htm
+++ b/index.htm
@@ -556,7 +556,7 @@
       </div>
     </div>
     <script src="engine/index.js"></script>
-    <!--<script src="engine/d3v4.min.js" charset="utf-8"></script><script src="engine/charts.min.js" charset="utf-8"></script><script src="engine/billboard.min.js"></script>-->
+    <script src="engine/d3v4.min.js" charset="utf-8"></script><script src="engine/charts.min.js" charset="utf-8"></script><script src="engine/billboard.min.js"></script>
     <script src="engine/pptxgen.min.js"></script>
     <script src="engine/pfill.js"></script>
     <script src="engine/published.js"></script>
@@ -573,8 +573,6 @@
         }, ],
       });
     </script>
-    <!-- JSzip -->
-    <script src="PptxGenJS/libs/jszip.min.js"></script> 
     <!-- Hammer JS -->
     <script src="hammer/hammer.js"></script>
     <script>
