--- a/index.htm
+++ b/index.htm
@@ -8,10 +8,11 @@
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <!-- Open Graph Meta Tags -->
+    <meta name="author" content="Kevin Middleton">
     <meta property="og:title" content="Kevin Middleton">
     <meta property="og:description" content="Welcome! I'm Kevin Middleton, a seasoned Product Manager passionate about SaaS, innovation, and driving growth. Discover my journey, expertise, and insights in the realm of product management.">
     <meta property="og:url" content="https://middleton.io">
-    <meta property="og:image" content="images/HeyThere.png">
+    <meta property="og:image" name="image" content="images/HeyThere.png">
     <!-- Style Sheets -->
     <link rel="stylesheet" href="engine/main.css">
     <link rel="stylesheet" href="theme/sanfrancisco.css">
