--- a/HVAC/index.htm
+++ b/HVAC/index.htm
@@ -190,7 +190,7 @@
       <div class="layout-default media-grid" style="width: 100%; font-size: 1rem;">
         <div style=""><h4 id="kopperfield">Kopperfield</h4>
 
-<div class="single-image-wrapper"><img src="images/Kopperfield_1.png" class=" position-center-center"></div></div>
+<div class="single-image-wrapper"><img src="images/Kopperfield_1.png" class=" size-contain position-center-center"></div></div>
       </div>
       <div class="footnotes"></div>
       <div class="footer"><div class="leading"></div><div class="middle"></div><div class="trailing"><img class="logo" src="images/hvac-com-logo-badge-black.png"></div></div>
@@ -201,7 +201,7 @@
       <div class="layout-default media-grid" style="width: 100%; font-size: 1rem;">
         <div style=""><h4 id="kopperfield">Kopperfield</h4>
 
-<div class="single-image-wrapper"><img src="images/Kopperfield_2.png" class=" position-center-center"></div></div>
+<div class="single-image-wrapper"><img src="images/Kopperfield_2.png" class=" size-contain position-center-center"></div></div>
       </div>
       <div class="footnotes"></div>
       <div class="footer"><div class="leading"></div><div class="middle"></div><div class="trailing"><img class="logo" src="images/hvac-com-logo-badge-black.png"></div></div>
@@ -212,7 +212,7 @@
       <div class="layout-default media-grid" style="width: 100%; font-size: 1rem;">
         <div style=""><h4 id="kopperfield">Kopperfield</h4>
 
-<div class="single-image-wrapper"><img src="images/Kopperfield_3.png" class=" position-center-center"></div></div>
+<div class="single-image-wrapper"><img src="images/Kopperfield_3.png" class=" size-contain position-center-center"></div></div>
       </div>
       <div class="footnotes"></div>
       <div class="footer"><div class="leading"></div><div class="middle"></div><div class="trailing"><img class="logo" src="images/hvac-com-logo-badge-black.png"></div></div>
@@ -223,7 +223,7 @@
       <div class="layout-default media-grid" style="width: 100%; font-size: 1rem;">
         <div style=""><h4 id="kopperfield">Kopperfield</h4>
 
-<div class="single-image-wrapper"><img src="images/Kopperfield_4.png" class=" position-center-center"></div></div>
+<div class="single-image-wrapper"><img src="images/Kopperfield_4.png" class=" size-contain position-center-center"></div></div>
       </div>
       <div class="footnotes"></div>
       <div class="footer"><div class="leading"></div><div class="middle"></div><div class="trailing"><img class="logo" src="images/hvac-com-logo-badge-black.png"></div></div>
@@ -234,7 +234,7 @@
       <div class="layout-default media-grid" style="width: 100%; font-size: 1rem;">
         <div style=""><h4 id="kopperfield">Kopperfield</h4>
 
-<div class="single-image-wrapper"><img src="images/Kopperfield_5.png" class=" position-center-center"></div></div>
+<div class="single-image-wrapper"><img src="images/Kopperfield_5.png" class=" size-contain position-center-center"></div></div>
       </div>
       <div class="footnotes"></div>
       <div class="footer"><div class="leading"></div><div class="middle"></div><div class="trailing"><img class="logo" src="images/hvac-com-logo-badge-black.png"></div></div>
@@ -245,7 +245,7 @@
       <div class="layout-default media-grid" style="width: 100%; font-size: 1rem;">
         <div style=""><h4 id="kopperfield">Kopperfield</h4>
 
-<div class="single-image-wrapper"><img src="images/Kopperfield_6.png" class=" position-center-center"></div></div>
+<div class="single-image-wrapper"><img src="images/Kopperfield_6.png" class=" size-contain position-center-center"></div></div>
       </div>
       <div class="footnotes"></div>
       <div class="footer"><div class="leading"></div><div class="middle"></div><div class="trailing"><img class="logo" src="images/hvac-com-logo-badge-black.png"></div></div>
@@ -256,7 +256,7 @@
       <div class="layout-default media-grid" style="width: 100%; font-size: 1rem;">
         <div style=""><h4 id="kopperfield">Kopperfield</h4>
 
-<div class="single-image-wrapper"><img src="images/Kopperfield_7.png" class=" position-center-center"></div></div>
+<div class="single-image-wrapper"><img src="images/Kopperfield_7.png" class=" size-contain position-center-center"></div></div>
       </div>
       <div class="footnotes"></div>
       <div class="footer"><div class="leading"></div><div class="middle"></div><div class="trailing"><img class="logo" src="images/hvac-com-logo-badge-black.png"></div></div>
@@ -267,7 +267,7 @@
       <div class="layout-default media-grid" style="width: 100%; font-size: 1rem;">
         <div style=""><h4 id="kopperfield">Kopperfield</h4>
 
-<div class="single-image-wrapper"><img src="images/Kopperfield_8.png" class=" position-center-center"></div></div>
+<div class="single-image-wrapper"><img src="images/Kopperfield_8.png" class=" size-contain position-center-center"></div></div>
       </div>
       <div class="footnotes"></div>
       <div class="footer"><div class="leading"></div><div class="middle"></div><div class="trailing"><img class="logo" src="images/hvac-com-logo-badge-black.png"></div></div>
@@ -278,7 +278,7 @@
       <div class="layout-default media-grid" style="width: 100%; font-size: 1rem;">
         <div style=""><h4 id="energysage">EnergySage</h4>
 
-<div class="single-image-wrapper"><img src="images/energysage_1.png" class=" position-center-center"></div></div>
+<div class="single-image-wrapper"><img src="images/energysage_1.png" class=" size-contain position-center-center"></div></div>
       </div>
       <div class="footnotes"></div>
       <div class="footer"><div class="leading"></div><div class="middle"></div><div class="trailing"><img class="logo" src="images/hvac-com-logo-badge-black.png"></div></div>
@@ -289,7 +289,7 @@
       <div class="layout-default media-grid" style="width: 100%; font-size: 1rem;">
         <div style=""><h4 id="energysage">EnergySage</h4>
 
-<div class="single-image-wrapper"><img src="images/energysage_2.png" class=" position-center-center"></div></div>
+<div class="single-image-wrapper"><img src="images/energysage_2.png" class=" size-contain position-center-center"></div></div>
       </div>
       <div class="footnotes"></div>
       <div class="footer"><div class="leading"></div><div class="middle"></div><div class="trailing"><img class="logo" src="images/hvac-com-logo-badge-black.png"></div></div>
@@ -300,7 +300,7 @@
       <div class="layout-default media-grid" style="width: 100%; font-size: 1rem;">
         <div style=""><h4 id="energysage">EnergySage</h4>
 
-<div class="single-image-wrapper"><img src="images/energysage_3.png" class=" position-center-center"></div></div>
+<div class="single-image-wrapper"><img src="images/energysage_3.png" class=" size-contain position-center-center"></div></div>
       </div>
       <div class="footnotes"></div>
       <div class="footer"><div class="leading"></div><div class="middle"></div><div class="trailing"><img class="logo" src="images/hvac-com-logo-badge-black.png"></div></div>
@@ -311,7 +311,7 @@
       <div class="layout-default media-grid" style="width: 100%; font-size: 1rem;">
         <div style=""><h4 id="energysage">EnergySage</h4>
 
-<div class="single-image-wrapper"><img src="images/energysage_4.png" class=" position-center-center"></div></div>
+<div class="single-image-wrapper"><img src="images/energysage_4.png" class=" size-contain position-center-center"></div></div>
       </div>
       <div class="footnotes"></div>
       <div class="footer"><div class="leading"></div><div class="middle"></div><div class="trailing"><img class="logo" src="images/hvac-com-logo-badge-black.png"></div></div>
@@ -322,7 +322,7 @@
       <div class="layout-default media-grid" style="width: 100%; font-size: 1rem;">
         <div style=""><h4 id="energysage">EnergySage</h4>
 
-<div class="single-image-wrapper"><img src="images/energysage_5.png" class=" position-center-center"></div></div>
+<div class="single-image-wrapper"><img src="images/energysage_5.png" class=" size-contain position-center-center"></div></div>
       </div>
       <div class="footnotes"></div>
       <div class="footer"><div class="leading"></div><div class="middle"></div><div class="trailing"><img class="logo" src="images/hvac-com-logo-badge-black.png"></div></div>
@@ -333,7 +333,7 @@
       <div class="layout-default media-grid" style="width: 100%; font-size: 1rem;">
         <div style=""><h4 id="energysage">EnergySage</h4>
 
-<div class="single-image-wrapper"><img src="images/energysage_6.png" class=" position-center-center"></div></div>
+<div class="single-image-wrapper"><img src="images/energysage_6.png" class=" size-contain position-center-center"></div></div>
       </div>
       <div class="footnotes"></div>
       <div class="footer"><div class="leading"></div><div class="middle"></div><div class="trailing"><img class="logo" src="images/hvac-com-logo-badge-black.png"></div></div>
@@ -344,7 +344,7 @@
       <div class="layout-default media-grid" style="width: 100%; font-size: 1rem;">
         <div style=""><h4 id="energysage">EnergySage</h4>
 
-<div class="single-image-wrapper"><img src="images/energysage_7.png" class=" position-center-center"></div></div>
+<div class="single-image-wrapper"><img src="images/energysage_7.png" class=" size-contain position-center-center"></div></div>
       </div>
       <div class="footnotes"></div>
       <div class="footer"><div class="leading"></div><div class="middle"></div><div class="trailing"><img class="logo" src="images/hvac-com-logo-badge-black.png"></div></div>
@@ -355,7 +355,7 @@
       <div class="layout-default media-grid" style="width: 100%; font-size: 1rem;">
         <div style=""><h4 id="energysage">EnergySage</h4>
 
-<div class="single-image-wrapper"><img src="images/energysage_8.png" class=" position-center-center"></div></div>
+<div class="single-image-wrapper"><img src="images/energysage_8.png" class=" size-contain position-center-center"></div></div>
       </div>
       <div class="footnotes"></div>
       <div class="footer"><div class="leading"></div><div class="middle"></div><div class="trailing"><img class="logo" src="images/hvac-com-logo-badge-black.png"></div></div>
@@ -366,7 +366,7 @@
       <div class="layout-default media-grid" style="width: 100%; font-size: 1rem;">
         <div style=""><h4 id="energysage">EnergySage</h4>
 
-<div class="single-image-wrapper"><img src="images/energysage_9.png" class=" position-center-center"></div></div>
+<div class="single-image-wrapper"><img src="images/energysage_9.png" class=" size-contain position-center-center"></div></div>
       </div>
       <div class="footnotes"></div>
       <div class="footer"><div class="leading"></div><div class="middle"></div><div class="trailing"><img class="logo" src="images/hvac-com-logo-badge-black.png"></div></div>
