--- a/HVAC/index.htm
+++ b/HVAC/index.htm
@@ -154,7 +154,7 @@
 
 <p>&nbsp;</p>
 
-<p>Though not directly HVAC, these sites do provide a window in features and areas that connect homeowners with contractors to schedule installation of EV chargers and solar panels.</p>
+<p>Though not HVAC, these EV & solar companies provide a window in features that connect homeowners with contractors to schedule installation of EV chargers and solar panels.</p>
 
 <p>&nbsp;</p>
 
