--- a/HVAC/index.htm
+++ b/HVAC/index.htm
@@ -704,7 +704,7 @@
 
 <p>&nbsp;</p>
 
-<p><strong>Payment Integration</strong>: Integrate diverse payment methods like Credit Card, Apple Pay, Google Pay, PayPal, Klarna, and Affirm, catering to user convenience and security in transactions.</p></div>
+<p><strong>Payment Integration</strong>: Integrate payment methods including Credit Card, Apple Pay, Google Pay, PayPal, Klarna, and Affirm, providing users with safe, secure, and convient ways to pay.</p></div>
       </div>
       <div class="footnotes"></div>
       <div class="footer"><div class="leading"></div><div class="middle"></div><div class="trailing"><img class="logo" src="images/hvac-com-logo-badge-black.png"></div></div>
