--- a/reveal/index.html
+++ b/reveal/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>Kevin Middleton - Product Manager</title>
-    <base href="@@base@@">
+    <base href="/reveal/">
     <meta charset="utf-8">
     <!-- meta name="viewport" content="viewport-fit=cover, width=device-width, height=device-height, initial-scale=1" / -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
