--- a/reveal/index.html
+++ b/reveal/index.html
@@ -5,11 +5,10 @@
 		<meta charset="utf-8">
 
 		<title>reveal.js - Markdown Example</title>
-
-		<link rel="stylesheet" href="../dist/reveal.css">
-		<link rel="stylesheet" href="../dist/theme/white.css" id="theme">
-
-        <link rel="stylesheet" href="../plugin/highlight/monokai.css">
+        <link rel="stylesheet" href="dist/reveal.css">
+        <link rel="stylesheet" href="dist/theme/white.css" id="theme">
+        <link rel="stylesheet" href="plugin/highlight/monokai.css">
+		
 	</head>
 
 	<body>
