--- a/reveal/index.html
+++ b/reveal/index.html
@@ -13,7 +13,7 @@
             <div class="slides">
                 <!-- Only use external markdown file for all content -->
                 <section data-markdown="site.md" 
-                         data-separator="^\n\n\n" 
+                         data-separator="^---\n" 
                          data-separator-vertical="^\n\n">
                 </section>
             </div>
