--- a/reveal/index.html
+++ b/reveal/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>reveal.js - Markdown Example</title>
         <link rel="stylesheet" href="dist/reveal.css">
-        <link rel="stylesheet" href="dist/theme/white.css" id="theme">
+        <link rel="stylesheet" href="dist/theme/merged_white_sanfrancisco.css" id="theme">
         <link rel="stylesheet" href="plugin/highlight/monokai.css">
     </head>
 
