--- a/reveal/index.html
+++ b/reveal/index.html
@@ -5,7 +5,7 @@
         <title>reveal.js - Markdown Example</title>
         <link rel="stylesheet" href="dist/reveal.css">
         <link rel="stylesheet" href="dist/theme/merged_white_sanfrancisco.css" id="theme">
-        <link rel="stylesheet" href="plugin/highlight/monokai.css">
+        <link rel="stylesheet" href="css/optimized_main.css">
     </head>
 
     <body>
