--- a/HVAC/index.htm
+++ b/HVAC/index.htm
@@ -651,13 +651,20 @@
       <div class="footnotes"></div>
       <div class="footer"><div class="leading"></div><div class="middle"></div><div class="trailing"><img class="logo" src="images/hvac-com-logo-badge-black.png"></div></div>
       
+</section><section class="variable-size-headings has-footer dark cover-container present has-dark-background fitted" data-background-color="#a06600" data-updated="true" style="display: grid;">
+
+      <div class="header"><div class="leading"></div><div class="middle"></div><div class="trailing"></div></div>
+      <div class="layout-cover" style="width: 100%; font-size: 1rem;">
+        <div style=""><h1 id="questionsanddiscussion">Questions and Discussion</h1></div>
+      </div>
+      <div class="footnotes"></div>
+      <div class="footer"><div class="leading"></div><div class="middle"></div><div class="trailing"><img class="logo" src="images/hvac-com-logo-badge-black.png"></div></div>
+      
 </section><section class="variable-size-headings has-footer dark cover-container present fit-warning has-dark-background fitted" data-background-color="#9e6f00" data-updated="true" style="display: grid;">
 
       <div class="header"><div class="leading"></div><div class="middle"></div><div class="trailing"></div></div>
       <div class="layout-cover" style="width: 100%; font-size: 0.391rem;">
         <div style=""><h1 id="appendix—prioritization">Appendix — Prioritization</h1>
-
-<p>&nbsp;</p>
 
 <table>
 <colgroup>
@@ -687,7 +694,7 @@
 	<td>6</td>
 	<td>7</td>
 	<td>4</td>
-	<td><mark>4.5</mark></td>
+	<td><mark>42</mark></td>
 </tr>
 <tr>
 	<td><mark>Instant Scheduling</mark></td>
@@ -695,7 +702,7 @@
 	<td>6</td>
 	<td>7</td>
 	<td>4</td>
-	<td><mark>5.25</mark></td>
+	<td><mark>52.5</mark></td>
 </tr>
 <tr>
 	<td>Reminders and Notifications</td>
@@ -703,7 +710,7 @@
 	<td>4</td>
 	<td>6</td>
 	<td>3</td>
-	<td>2.67</td>
+	<td>32</td>
 </tr>
 <tr>
 	<td>AI-Powered Recommendations</td>
@@ -711,7 +718,7 @@
 	<td>7</td>
 	<td>5</td>
 	<td>6</td>
-	<td>1.17</td>
+	<td>11.67</td>
 </tr>
 <tr>
 	<td>HVAC.com Express</td>
@@ -719,7 +726,7 @@
 	<td>5</td>
 	<td>6</td>
 	<td>5</td>
-	<td>2.5</td>
+	<td>18</td>
 </tr>
 <tr>
 	<td>Payment Integration</td>
@@ -727,7 +734,7 @@
 	<td>5</td>
 	<td>6</td>
 	<td>4</td>
-	<td>3.75</td>
+	<td>30</td>
 </tr>
 <tr>
 	<td>Partnerships</td>
@@ -735,10 +742,14 @@
 	<td>7</td>
 	<td>5</td>
 	<td>5</td>
-	<td>1.4</td>
+	<td>14</td>
 </tr>
 </tbody>
-</table></div>
+</table>
+
+<p>&nbsp;</p>
+
+<p>RICE Score = (Reach * Impact * Confidence) / Effort</p></div>
       </div>
       <div class="footnotes"></div>
       <div class="footer"><div class="leading"></div><div class="middle"></div><div class="trailing"><img class="logo" src="images/hvac-com-logo-badge-black.png"></div></div>
