--- a/index.htm
+++ b/index.htm
@@ -535,6 +535,12 @@
                   <strong>Resume</strong>
                 </a>
               </p>
+	      <p>
+              <script type="text/javascript">
+              document.write('<a href="mai' + 'lto:' + 'kevin' + '@' + 'middleton' + '.' + 'io" id="email-link" onclick="sendCustomTagToClarity(\'Link Click\', \'Email Contact\')"><strong>Email Me</strong></a>');
+              </script>
+              <noscript>Please enable JavaScript to see my email address.</noscript>
+      </p>
             </div>
           </div>
           <div class="footnotes"></div>
