--- a/index.htm
+++ b/index.htm
@@ -535,6 +535,7 @@
                   <strong>Resume</strong>
                 </a>
               </p>
+	      <p>&nbsp;</p>
 	      <p>
               <script type="text/javascript">
               document.write('<a href="mai' + 'lto:' + 'kevin' + '@' + 'middleton' + '.' + 'io" id="email-link" onclick="sendCustomTagToClarity(\'Link Click\', \'Email Contact\')"><strong>Email Me</strong></a>');
