--- a/index.htm
+++ b/index.htm
@@ -526,12 +526,12 @@
               <h2 id="letsconnect">Let's Connect!</h2>
               <p>Whether it's about product management, the latest in SaaS, or just a friendly chat, I'm always open to connecting and exchanging ideas.</p>
               <p>&nbsp;</p>
-              <p>Add me on <a href="https://www.linkedin.com/in/kevinmiddleton" id="linkedin-profile" onclick="sendCustomTagToClarity('Link Click', 'LinkedIn Profile')">
+              <p>Add Me on <a href="https://www.linkedin.com/in/kevinmiddleton" id="linkedin-profile" onclick="sendCustomTagToClarity('Link Click', 'LinkedIn Profile')">
                   <strong>LinkedIn</strong>
                 </a>
               </p>
               <p>&nbsp;</p>
-              <p>Download my <a href="https://raw.githubusercontent.com/kevinmmiddleton/about/main/Kevin%20Middleton%20-%20Senior%20Product%20Manager%2012-01-2023.pdf" id="resume-download" onclick="sendCustomTagToClarity('Link Click', 'Resume Download')">
+              <p>Download My <a href="https://raw.githubusercontent.com/kevinmmiddleton/about/main/Kevin%20Middleton%20-%20Senior%20Product%20Manager%2012-01-2023.pdf" id="resume-download" onclick="sendCustomTagToClarity('Link Click', 'Resume Download')">
                   <strong>Resume</strong>
                 </a>
               </p>
