--- a/index.htm
+++ b/index.htm
@@ -40,6 +40,10 @@
         --darkbackgroundcolor: transparent;
         --bodyfont: ui-monospace;
         --titlefont: system-ui;
+	a {
+            padding: 0; /* Reset padding to zero */
+            margin: 0; /* Reset margin to zero */
+        }
       }
     </style>
     <link rel="stylesheet" type="text/css" href="engine/print.css" media="print">
